--- a/src/auth-register.html
+++ b/src/auth-register.html
@@ -1,4 +1,4 @@
-{% set title = 'Registration' %}
+{% set title = 'Регистрация' %}
 
 {% extends 'layouts/auth.html' %}
 {% block content %}
@@ -11,27 +11,32 @@
             <h1 class="auth-title">Регистрация</h1>
             <p class="auth-subtitle mb-5">Введите данные для регистрации на сайте</p>
 
-            <form action="/registration" method="post">
-                <div class="form-group position-relative has-icon-left mb-4">
-                    <input type="text" id= "email" name="email" class="form-control form-control-xl" placeholder="Почта">
-                    <div class="form-control-icon">
+            <form action="/registration" method="post" class="needs-validation">
+
+                <div class="form-group position-relative has-icon-left mb-4" >
+                    <input type="text" id= "email" name="email" class="form-control form-control-xl" placeholder="Почта" required>
+                    <div class="form-control-icon ">
                         <i class="bi bi-envelope"></i>
                     </div>
+                    <div class="valid-feedback">
+                        Все хорошо!
+                    </div>
+                    <div class="invalid-feedback">{{message}}</div>
                 </div>
                 <div class="form-group position-relative has-icon-left mb-4">
-                    <input type="text" id="username" name="username" class="form-control form-control-xl" placeholder="Имя пользователя">
+                    <input type="text" id="username" name="username" class="form-control form-control-xl" placeholder="Имя пользователя" required>
                     <div class="form-control-icon">
                         <i class="bi bi-person"></i>
                     </div>
                 </div>
                 <div class="form-group position-relative has-icon-left mb-4">
-                    <input type="password" name="password" id="password"  class="form-control form-control-xl" placeholder="Пароль">
+                    <input type="password" name="password" id="password"  class="form-control form-control-xl" placeholder="Пароль" required>
                     <div class="form-control-icon">
                         <i class="bi bi-shield-lock"></i>
                     </div>
                 </div>
                 <div class="form-group position-relative has-icon-left mb-4">
-                    <input type="password" name="password2" id="password2" class="form-control form-control-xl" placeholder="Подтвердить пароль">
+                    <input type="password" name="password2" id="password2" class="form-control form-control-xl" placeholder="Подтвердить пароль" required>
                     <div class="form-control-icon">
                         <i class="bi bi-shield-lock"></i>
                     </div>
