complete login & register

--- a/src/auth-forgot-password.html
+++ b/src/auth-forgot-password.html
@@ -6,14 +6,14 @@
     <div class="col-lg-5 col-12">
         <div id="auth-left">
             <div class="auth-logo">
-                <a href="index.html"><img src="assets/images/logo/logo.png" alt="Logo"></a>
+                <a href="/login"><img src="#" alt="Logo"></a>
             </div>
             <h1 class="auth-title">Забыли пароль</h1>
-            <p class="auth-subtitle mb-5">Введите свою почту и мы вышлем вам ссылку для восстановления пароля</p>
+            <p class="auth-subtitle mb-5">Введите свою почту и мы вышлем вам данные для входа</p>
 
             <form action="index.html">
                 <div class="form-group position-relative has-icon-left mb-4">
-                    <input type="email" class="form-control form-control-xl" placeholder="Email">
+                    <input name="email" type="email" class="form-control form-control-xl" placeholder="Email">
                     <div class="form-control-icon">
                         <i class="bi bi-envelope"></i>
                     </div>
@@ -21,7 +21,7 @@
                 <button class="btn btn-primary btn-block btn-lg shadow-lg mt-5">Send</button>
             </form>
             <div class="text-center mt-5 text-lg fs-4">
-                <p class='text-gray-600'>Знаешь свои данные? <a href="auth-login.html" class="font-bold">Войти</a>.
+                <p class='text-gray-600'>Знаешь свои данные? <a href="/login" class="font-bold">Войти</a>.
                 </p>
             </div>
         </div>
