--- a/src/auth-login.html
+++ b/src/auth-login.html
@@ -1,4 +1,4 @@
-{% set title = 'Вход в программу:' %}
+{% set title = 'Вход на сайт' %}
 
 {% extends 'layouts/auth.html' %}
 {% block content %}
@@ -9,32 +9,48 @@
                 <a href="/login"><img src="#" alt="Logo"></a>
             </div>
             <h1 class="auth-title">Вход на сайт</h1>
-            <p class="auth-subtitle mb-5">Введите ваши данные, полученные при регистрации</p>
-
+            <p class="auth-subtitle">Введите данные для входа, полученные при регистрации</p>
+            {% if globValidateMsg %}
+            <p class="auth-subtitle-error">{{ globValidateMsg }}</p>
+            {% endif %}
+            {% if msglogin %}
+            <p class="auth-subtitle-ok">msglogin</p>
+            {% endif %}
             <form action="/login" method="post">
                 <div class="form-group position-relative has-icon-left mb-4">
-                    <input type="text" name="username" id="username" class="form-control form-control-xl" placeholder="Имя пользователя">
+                    {% if user.username %}
+                    <input type="text" name="username" id="username" class="form-control form-control-xl"
+                           placeholder="Имя пользователя" value="{{ user.username }}">
+                    {% else %}
+                    <input type="text" name="username" id="username" class="form-control form-control-xl"
+                           placeholder="Имя пользователя">
+                    {% endif %}
                     <div class="form-control-icon">
                         <i class="bi bi-person"></i>
                     </div>
                 </div>
                 <div class="form-group position-relative has-icon-left mb-4">
+                    {% if user.password %}
+                    <input type="password" name="password" id="password" class="form-control form-control-xl"
+                           placeholder="Пароль" value={{ user.password }}>
+                    {% else %}
                     <input type="password" name="password" id="password" class="form-control form-control-xl" placeholder="Пароль">
+                    {% endif %}
                     <div class="form-control-icon">
                         <i class="bi bi-shield-lock"></i>
                     </div>
                 </div>
                 <div class="form-check form-check-lg d-flex align-items-end">
-                    <input class="form-check-input me-2" type="checkbox" value="" id="flexCheckDefault">
+                    <input class="form-check-input me-2" name="savelogin" type="checkbox" value="" id="flexCheckDefault">
                     <label class="form-check-label text-gray-600" for="flexCheckDefault">
                         Запомнить данные для входа
                     </label>
                 </div>
-                <button type="submit" class="btn btn-primary btn-block btn-lg shadow-lg mt-5">Войти</button>
+                <button type="submit" class="btn btn-primary btn-block btn-lg shadow-lg">Войти</button>
             </form>
             <div class="text-center mt-5 text-lg fs-4">
-                <p class="text-gray-600">Нет аккаунта? <a href="auth-register.html" class="font-bold">Регистрация</a>.</p>
-                <p><a class="font-bold" href="auth-forgot-password.html">Забыли пароль?</a>.</p>
+                <p class="text-gray-600">Нет аккаунта? <a href="/registration" class="font-bold">Регистрация</a>.</p>
+                <p><a class="font-bold" href="forgotpassword">Забыли пароль?</a>.</p>
             </div>
         </div>
     </div>
