--- a/src/auth-register.html
+++ b/src/auth-register.html
@@ -1,5 +1,5 @@
 {% set title = 'Регистрация' %}
-
+<!--{% set username = currentuser.username %}-->
 {% extends 'layouts/auth.html' %}
 {% block content %}
 <div class="row h-100">
@@ -10,24 +10,36 @@
             </div>
             <h1 class="auth-title">Регистрация</h1>
             <p class="auth-subtitle">Введите данные для регистрации на сайте</p>
-            <p class="auth-subtitle">{{ message }}</p>
-            <form action="/registration" method="post" class="needs-validation">
-
+            {% if globValidateMsg %}
+            <p class="auth-subtitle-error">{{ globValidateMsg }}</p>
+            {% else %}
+            <p class="auth-subtitle-error">Все поля должны быть заполнены</p>
+            {% endif %}
+            <form action="/registration" method="post" class="needs-validation was-validated" >
                 <div class="form-group position-relative has-icon-left mb-4" >
+                    {% if user.email %}
+                    <input type="text" id= "email" name="email" class="form-control form-control-xl" placeholder="Почта" value={{ user.email }}>
+                    {% else %}
                     <input type="text" id= "email" name="email" class="form-control form-control-xl" placeholder="Почта" required>
+                    {% endif %}
                     <div class="form-control-icon ">
                         <i class="bi bi-envelope"></i>
                     </div>
-
-
                 </div>
                 <div class="form-group position-relative has-icon-left mb-4">
-                    <input type="text" id="username" name="username" class="form-control form-control-xl" placeholder="Имя пользователя" required>
+                    {% if user.username %}
+                    <input type="text" id="username" name="username" class="form-control form-control-xl" placeholder="Имя пользователя"
+                            value={{ user.username }} required>
+                    {% else %}
+                    <input type="text" id="username" name="username" class="form-control form-control-xl" placeholder="Имя пользователя"
+                            required>
+                    {% endif %}
                     <div class="form-control-icon">
                         <i class="bi bi-person"></i>
                     </div>
                 </div>
                 <div class="form-group position-relative has-icon-left mb-4">
+
                     <input type="password" name="password" id="password"  class="form-control form-control-xl" placeholder="Пароль" required>
                     <div class="form-control-icon">
                         <i class="bi bi-shield-lock"></i>
@@ -38,17 +50,16 @@
                     <div class="form-control-icon">
                         <i class="bi bi-shield-lock"></i>
                     </div>
-                    <div class="valid-tooltip">
-                        {{ message }}
+                    {% if globValidateMsg %}
+                    <div class="invalid-tooltip">
+                        {{ globValidateMsg }}
                     </div>
-                    <div class="invalid-feedback">
-                        {{ message }}
-                    </div>
+                    {% endif %}
                 </div>
                 <button type="submit" class="btn btn-primary btn-block btn-lg shadow-lg ">Зарегистрироваться</button>
             </form>
             <div class="text-center mt-5 text-lg fs-4">
-                <p class='text-gray-600'>Уже есть аккаунт? <a href="/login" class="font-bold">Войти</a>.</p>
+                <p class='text-gray-600'>Уже есть аккаунт? <a href="/login" class="font-bold">Войти на сайт</a>.</p>
             </div>
         </div>
     </div>
